--- a/css/style.css
+++ b/css/style.css
@@ -3641,6 +3641,35 @@ section.parallax-section .bg {
 	margin:-3px;
 	border-radius:50%;
 }
+.pdli1{
+	padding: 30px 0px 20px 40px !important;
+	background: #f1f1f1 !important;
+
+}
+#particle-canvas {
+	width: 100%;
+	height: 100%;
+}
+.pdli ul{
+	list-style: disc !important;
+}
+.pdli li{
+	list-style: disc !important;
+	text-transform: none!important;
+	color: #f57500 !important;
+	font-size: unset!important;
+	letter-spacing: 1px!important;
+}
+.pdli li:before{
+	content: none !important;
+}
+.pdli h4{
+	top:-4px;
+	padding-left: 5px;
+	margin-bottom: 0px !important;
+	font-weight: 0!important;
+	color: #666!important;
+}
 .pdcw_list  li:last-child:before {
 	display:none;
 }
@@ -4803,6 +4832,98 @@ section.parallax-section .bg {
 .lg-actions .lg-next:hover, .lg-actions .lg-prev:hover {
 	color:#fff;
 }
+
+/*------Resume------------------------------------------------*/
+.resume{
+	background: #f1f1f1;
+}
+
+.resume-details  {
+	text-align: left;
+	float: left;
+	padding: 0px 50px 10px 50px;
+	margin-bottom:25px;
+	overflow:hidden;
+	position: relative;
+	z-index:2;
+}
+.resume-details:before {
+	content:'';
+	position:absolute;
+	right:0;
+	width:0;
+	bottom:33px;
+	height:1px;
+	transition: all 0.2s ease-in-out;
+	z-index:2;
+}
+.resume-details:hover:before {
+	width:30%;
+}
+
+.resume .resume-title {
+	font-size: 26px;
+	font-weight: 700;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	color: #050d18;
+}
+
+
+
+.resume .resume-item h4 {
+	line-height: 18px;
+	font-size: 18px;
+	font-style: inherit;
+	color: #050d18;
+	margin-bottom: 10px;
+}
+
+.resume .resume-item h5 {
+	font-size: 16px;
+	background: #e4edf9;
+	padding: 5px 15px;
+	display: inline-block;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+
+.resume .resume-item ul {
+	padding-left: 20px;
+	list-style: disc;
+}
+
+.resume .resume-item ul li {
+	padding-bottom: 10px;
+	font-family: 'Roboto', sans-serif;
+	text-align: justify;
+	line-height: 20px;
+}
+
+.resume .resume-item:last-child {
+	padding-bottom: 0;
+}
+
+.resume .resume-item {
+	padding: 0 0 20px 20px;
+	margin-top: -2px;
+	border-left: 2px solid #1f5297;
+	position: relative;
+}
+
+.resume .resume-item::before {
+	content: "";
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	border-radius: 50px;
+	left: -9px;
+	top: 0;
+	background: #fff;
+	border: 2px solid #1f5297;
+}
+
 /*------responsive------------------------------------------------*/
 
 @media only screen and (max-height: 600px) {
