--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
 	color: #000;
 	font-family: 'Mukta Vaani', sans-serif;
 }
+
 @-o-viewport {
 	width: device-width;
 }
@@ -3285,7 +3286,7 @@ section.parallax-section .bg {
 	width:0px;
 }
 .skill-bar-percent {
-	float:right;
+	float:left;
 	font-size:14px;
 	font-weight:800;
 	color:#666
@@ -5613,4 +5614,91 @@ section.parallax-section .bg {
 
 ntitle{
 	color: white;
+}
+
+/*logo slider*/
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+
+:root {
+	--marquee-width: 80vw;
+	--marquee-height: 20vh;
+	/* --marquee-elements: 12; */ /* defined with JavaScript */
+	--marquee-elements-displayed: 5;
+	--marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
+	--marquee-animation-duration: calc(var(--marquee-elements) * 3s);
+}
+
+.marquee {
+	height: var(--marquee-height);
+	overflow: hidden;
+	position: relative;
+}
+.marquee:before, .marquee:after {
+	position: absolute;
+	top: 0;
+	width: 10rem;
+	height: 100%;
+	content: "";
+	z-index: 1;
+}
+.marquee:before {
+	left: 0;
+}
+.marquee:after {
+	right: 0;
+}
+.marquee-content {
+	list-style: none;
+	height: 100%;
+	display: flex;
+	animation: scrolling var(--marquee-animation-duration) linear infinite;
+}
+.marquee-content:hover {
+	animation-play-state: paused;
+}
+@keyframes scrolling {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-1 * var(--marquee-element-width) * var(--marquee-elements))); }
+}
+.marquee-content li {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* text-align: center; */
+	flex-shrink: 0;
+	width: var(--marquee-element-width);
+	max-height: 100%;
+	font-size: calc(var(--marquee-height)*3/4); /* 5rem; */
+	white-space: nowrap;
+}
+
+.marquee-content li img {
+	width: 100%;
+	 height: 100%;
+	/*border: 2px solid #eee;*/
+}
+
+.marquee-content li img {
+	-webkit-filter: grayscale(100%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
+	filter: grayscale(100%); /* FF 35+ */
+}
+
+.marquee-content li img:hover {
+	-webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
+	filter: grayscale(0%); /* FF 35+ */
+}
+
+@media (max-width: 600px) {
+	html { font-size: 12px; }
+	:root {
+		--marquee-width: 100vw;
+		--marquee-height: 16vh;
+		--marquee-elements-displayed: 3;
+	}
+	.marquee:before, .marquee:after { width: 5rem; }
 }
